2010-12-05  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tclCmdMZ.c: [Bug 3127687] Triggers FORTIFY_SOURCE
	buffer overflow detection

2010-11-03  Jeff Hobbs  <jeffh@ActiveState.com>

	Backported from 8.6 (see 2010-08-04).
	* win/tclWin32Dll.c (asciiProcs, unicodeProcs):
	* win/tclWinLoad.c (TclpDlopen): 'load' use LoadLibraryEx with
	* win/tclWinInt.h (TclWinProcs): LOAD_WITH_ALTERED_SEARCH_PATH to
	prefer dependent DLLs in same dir as loaded DLL.

2010-10-31  Jan Nijtmans  <nijtmans@users.sf.net>

	* win/tcl.m4     Add -D_CRT_SECURE_NO_DEPRECATE and
	-D_CRT_NONSTDC_NO_DEPRECATE, reducing the number of
	deprecation warnings on later VC++ versions.
	* win/rules.vc   Better VCVERSION determination
	* win/configure  (regenerated with autoconf 2.13)
	All changes backported from Tcl8.5/8.6

2010-10-23  Jan Nijtmans  <nijtmans@users.sf.net>

	* tools/uniParse.tcl:   [Bug 3085863]: tclUniData 9 years old
	* tools/uniClass.tcl:   Upgrade everything to Unicode 6.0, except
	* tests/utf.test:       non-BMP characters > 0xFFFF
	* generic/tclUniData.c: (re-generated)
	* generic/regc_locale.c:(re-generated)
	* generic/regcomp.c:    fix comment/signatures referencing regc_locale
	* win/rules.vc          Update for VS10

2010-09-24  Andreas Kupries  <andreask@activestate.com>

	* tclWinsock.c: [Bug 3056775]: Fixed race condition between thread
	and internal co-thread access of a socket's structure because of
	the thread not using the socketListLock in TcpAccept(). Added
	documentation on how the module works to the top.

2010-09-01  Andreas Kupries  <andreask@activestate.com>

	* generic/tclExecute.c: [Bug 3057639]. Applied patch by Jeff to
	* generic/tclVar.c: make the behaviour of lappend in bytecompiled
	* tests/append.test: mode consistent with direct-eval and 'append'
	* tests/appendComp.test: generally. Added tests (append*-9.*)
	showing the difference.

2010-07-25  Jan Nijtmans  <nijtmans@users.sf.net>
